<resources>
    <string name="app_name">Trakr</string>
    <string name="title_activity_main">Trakr</string>
    <string name="action_track_list">Track list</string>
    <string name="action_track_map">Explore tracks</string>
    <string name="bottom_sheet_label_point">Point</string>
    <string name="bottom_sheet_label_track">Track</string>
    <string name="bottom_sheet_label_charts">Charts</string>
    <string name="login_error_cancel">Sign in cancelled</string>
    <string name="login_error_no_internet">No internet connection</string>
    <string name="login_error_unknown_response">Unknown sign in response</string>
    <string name="login_error_unknown_error">Unknown error</string>
    <string name="login_successful">You are logged in</string>
    <string name="you_are_logged_out">You are logged out</string>
    <string name="start_recording_a_track">Start recording a track!</string>
    <string name="activity_main_dialog_stop_recording_stop_recording">Stop recording?</string>
    <string name="activity_main_dialog_stop_recording_continue">Continue</string>
    <string name="activity_main_dialog_stop_recording_stop">Stop</string>
    <string name="activity_main_dialog_stop_recording_icon_content_desc">Icon of application</string>
    <string name="title_activity_track_list">Recorded tracks</string>
    <string name="activity_track_list_no_tracks">No tracks here. Start by recording one!</string>
    <string name="title_activity_explore">Explore tracks</string>
    <string name="activity_explore_no_tracks">No tracks here. Start by recording one!</string>
    <string name="activity_explore_dialog_track_details_view">View</string>
    <string name="title_activity_track_detail">Track detail</string>
    <string name="action_export">Export track</string>
    <string name="action_delete">Delete track</string>
    <string name="bottom_navigation_title_map">Map</string>
    <string name="bottom_navigation_title_data">Data</string>
    <string name="bottom_navigation_title_charts">Charts</string>
    <string name="write_permission_denied">Write External Storage Permission not granted</string>
    <string name="enter_title_hint">Enter title</string>
    <string name="edit_title_dialog_title">Edit title</string>
    <string name="edit_title_dialog_ok">OK</string>
    <string name="edit_title_dialog_invalid_title">Invalid title</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="x_axis_time">time</string>
    <string name="x_axis_distance">distance</string>
    <string name="elevation_chart_title">Elevation [m]</string>
    <string name="elevation_chart_title_imperial">Elevation [ft]</string>
    <string name="speed_chart_title">Speed [km/h]</string>
    <string name="speed_chart_title_imperial">Speed [mi/h]</string>
    <string name="pace_chart_title">Pace [min/km]</string>
    <string name="pace_chart_title_imperial">Pace [min/mi]</string>
    <string name="speed_pace">Speed/Pace</string>
    <string name="speed">Speed</string>
    <string name="pace">Pace</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_group_user">User</string>
    <string name="settings_group_preferences">Preferences</string>
    <string name="settings_group_legal">Legal</string>
    <string name="settings_group_contact">Contact</string>
    <string name="setting_label_login">Log in</string>
    <string name="settings_description_login">Enable cloud backup and synchronisation of your recorded tracks between your devices.</string>
    <string name="setting_label_logout">Log out</string>
    <string name="settings_description_logout">Disable cloud backup and synchronisation of your recorded tracks. All tracks recorded with your account will be deleted from this device (but not from the cloud backup).</string>
    <string name="settings_description_logout_with_account">Disable cloud backup and synchronisation of your recorded tracks. All tracks recorded with your account (%s) will be deleted from this device (but not from the cloud backup).</string>
    <string name="setting_label_delete_account">Delete account</string>
    <string name="settings_description_delete_account">Log out and also delete all recorded tracks from the cloud backup, but not from your device.</string>
    <string name="setting_label_accuracy">Accuracy</string>
    <string name="settings_description_accuracy">The more accurate the recording, the more often individual location-points are saved. \nThe more accurate the recording, the more accurate location signal is required: if you can not achieve accurate enough GPS signal, points will not be recored. </string>
    <string name="setting_label_units">Units</string>
    <string name="setting_description_units">Do you prefer km of miles?</string>
    <string name="radiobutton_label_metric">Metric</string>
    <string name="radiobutton_label_implerial">Imperial</string>
    <string name="setting_label_terms_of_use">Terms of use</string>
    <string name="setting_label_privacy_policy">Privacy policy</string>
    <string name="setting_label_libraries">Libraries</string>
    <string name="setting_description_libraries">The open source libraries that made Trakr possible</string>
    <string name="setting_label_feedback">Feedback and report</string>
    <string name="setting_description_feedback">Have a problem? Want to suggest an improvement? Tap here!</string>
    <string name="password">password</string>
    <string name="logout_dialog_title">Log out</string>
    <string name="logout_dialog_message">On logging out, all the tracks saved by this account: %s
        will be removed from this device. Those tracks will be available on next login.\n\nDo you
        really want to log out?"</string>
    <string name="delete_account_dialog_title">Delete account</string>
    <string name="delete_account_dialog_message">Do you really want to delete your Trakr account? \nPlease enter your password </string>
    <string name="delete_account_toast_invalid_password">Invalid password</string>
    <string name="delete_account_toast_authentication_error">Authentication error</string>
    <string name="night_track">Night track</string>
    <string name="dawn_track">Dawn track</string>
    <string name="early_morning_track">Early morning track</string>
    <string name="morning_track">Morning track</string>
    <string name="afternoon_track">Afternoon track</string>
    <string name="evening_track">Evening track</string>
    <string name="max_speed_view_title">Max.Speed</string>
    <string name="max_speed_view_unit">km/h</string>
    <string name="max_speed_view_unit_imperial" translatable="false">mi/h</string>
    <string name="max_speed_view_default_value">0</string>
    <string name="avg_speed_view_title">Avg.Speed</string>
    <string name="avg_speed_view_unit">km/h</string>
    <string name="avg_speed_view_unit_imperial" translatable="false">mi/h</string>
    <string name="avg_speed_view_default_value">-</string>
    <string name="max_pace_view_title">Max.Pace</string>
    <string name="max_pace_view_unit">min/km</string>
    <string name="max_pace_view_unit_imperial" translatable="false">min/mi</string>
    <string name="max_pace_view_default_value">-</string>
    <string name="avg_pace_view_title">Avg.Pace</string>
    <string name="avg_pace_view_unit">min/km</string>
    <string name="avg_pace_view_unit_imperial" translatable="false">min/mi</string>
    <string name="avg_pace_view_default_value">-</string>
    <string name="ascent_view_title">Ascent</string>
    <string name="ascent_view_unit">m</string>
    <string name="ascent_view_unit_imperial" translatable="false">ft</string>
    <string name="ascent_view_default_value">0</string>
    <string name="descent_view_title">Descent</string>
    <string name="descent_view_unit">m</string>
    <string name="descent_view_unit_imperial" translatable="false">ft</string>
    <string name="descent_view_default_value">0</string>
    <string name="max_altitude_view_title">Max.Altitude</string>
    <string name="max_altitude_view_unit">m</string>
    <string name="max_altitude_view_unit_imperial" translatable="false">ft</string>
    <string name="max_altitude_view_default_value">0</string>
    <string name="min_altitude_view_title">Min.Altitude</string>
    <string name="min_altitude_view_unit">m</string>
    <string name="min_altitude_view_unit_imperial" translatable="false">ft</string>
    <string name="min_altitude_view_default_value">0</string>
    <string name="elapsed_time_view_title">Duration</string>
    <string name="elapsed_time_view_unit">s</string>
    <string name="elapsed_time_view_default_value">00:00</string>
    <string name="distance_view_title">Distance</string>
    <string name="distance_view_unit">km</string>
    <string name="distance_view_unit_imperial" translatable="false">mi</string>
    <string name="distance_view_default_value">0.0</string>
    <string name="speed_view_label">Speed</string>
    <string name="speed_view_unit">km/h</string>
    <string name="speed_view_unit_imperial" translatable="false">mi/h</string>
    <string name="speed_view_default_value">0.0</string>
    <string name="accuracy_view_label">Accuracy</string>
    <string name="accuracy_view_unit">m</string>
    <string name="accuracy_view_unit_imperial" translatable="false">ft</string>
    <string name="accuracy_view_default_value">-</string>
    <string name="bearing_view_label">Bearing</string>
    <string name="bearing_view_unit">°</string>
    <string name="bearing_view_default_value">-</string>
    <string name="altitude_view_label">Altitude</string>
    <string name="altitude_view_unit">m</string>
    <string name="altitude_view_unit_imperial" translatable="false">ft</string>
    <string name="altitude_view_default_value">0</string>
    <string name="start_time_view_title">Start</string>
    <string name="start_time_view_unit"> </string>
    <string name="start_time_view_default_value">00:00</string>
    <string name="end_time_view_title">End</string>
    <string name="end_time_view_unit"> </string>
    <string name="end_time_view_default_value">00:00</string>
    <string name="view_secondary_property_icon_iv_icon_content_desc">Icon of field</string>
    <string name="record_notification_line_1">Duration: %ss</string>
    <string name="record_notification_line_2">Distance: %skm</string>
    <string name="record_notification_line_2_imperial">Distance: %smi</string>
    <string name="record_notification_line_3">Ascent: %sm</string>
    <string name="record_notification_line_3_imperial">Ascent: %sft</string>
    <string name="record_notification_line_4">Descent: %sm</string>
    <string name="record_notification_line_4_imperial">Descent: %sft</string>
    <string name="record_notification_line_5">Avg. speed: %skm/h</string>
    <string name="record_notification_line_5_imperial">Avg. speed: %smi/h</string>
    <string name="location_permission_rationale_title">Location permission</string>
    <string name="activity_track_detail_fragment_data_iv_initial_content_desc">Initial letter of
        title</string>
    <string name="activity_track_detail_fragment_data_ib_edit_content_desc">Edit button</string>
    <string name="activity_track_list_item_track_iv_initial_content_desc">Initial letter of title
    </string>
    <string name="transition_ppvi_distance" translatable="false">transition_ppvi_distance</string>
    <string name="transition_ppvi_duration" translatable="false">transition_ppvi_duration</string>
    <string name="transition_ppvi_ascent" translatable="false">transition_ppvi_ascent</string>
    <string name="transition_tv_title" translatable="false">transition_tv_title</string>
    <string name="transition_tv_date" translatable="false">transition_tv_date</string>
    <string name="transition_iv_icon" translatable="false">transition_iv_icon</string>
    <string name="transition_title_bar" translatable="false">transition_title_bar</string>
</resources>