<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:transitionName="@string/transition_iv_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            android:contentDescription="@string/activity_track_list_item_track_iv_initial_content_desc" />

        <TextView
            android:id="@+id/tv_title"
            android:transitionName="@string/transition_tv_title"
            style="@style/TrackDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/tv_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_icon"
            tools:text="Title text" />

        <TextView
            android:id="@+id/tv_date"
            android:transitionName="@string/transition_tv_date"
            style="@style/TrackDetailDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="Subtitle text" />

        <com.awolity.trakrviews.SecondaryPropertyViewIcon
            android:id="@+id/spv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:transitionName="@string/transition_ppvi_distance"
            app:layout_constraintEnd_toStartOf="@+id/spv_duration"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/iv_icon"
            app:layout_constraintTop_toBottomOf="@id/iv_icon" />

        <com.awolity.trakrviews.SecondaryPropertyViewIcon
            android:id="@+id/spv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:transitionName="@string/transition_ppvi_duration"
            app:layout_constraintEnd_toStartOf="@+id/spv_ascent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/spv_distance"
            app:layout_constraintTop_toTopOf="@+id/spv_distance" />

        <com.awolity.trakrviews.SecondaryPropertyViewIcon
            android:id="@+id/spv_ascent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_ppvi_ascent"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/spv_duration"
            app:layout_constraintTop_toTopOf="@+id/spv_distance" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
