<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.detail.TrackDetailActivityDataFragment">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:transitionName="@string/transition_title_bar"
        android:id="@+id/title_bar"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/activity_track_detail_fragment_data_iv_initial_content_desc"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_iv_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TrackDetailTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:transitionName="@string/transition_tv_title"
                app:layout_constraintBottom_toTopOf="@+id/tv_date"
                app:layout_constraintEnd_toStartOf="@+id/ib_edit"
                app:layout_constraintStart_toEndOf="@+id/iv_icon"
                app:layout_constraintTop_toTopOf="@+id/iv_icon"
                tools:text="Title text" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/TrackDetailDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:transitionName="@string/transition_tv_date"
                app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
                app:layout_constraintEnd_toStartOf="@+id/ib_edit"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:text="Subtitle text" />

            <ImageButton
                android:id="@+id/ib_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/activity_track_detail_fragment_data_ib_edit_content_desc"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/tv_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
